# oura-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: SETUP.md
tests/: test_server.py
