[project]
name = "oura-mcp"
version = "0.2.1"
description = "Oura ring biometrics — MCP server for Claude Desktop"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
oura-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests import server.py from the repo root
pythonpath = ["."]
